// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package  = "github.com/zededa/eve/api/go/config";
option java_package = "com.zededa.cloud.uservice.proto";

// XXX duplicate of definition in zmet.proto with uniq names (ZCio vs Zio)
// Types of I/O adapters that can be assigned to applications
enum ZCioType {
  ZCioNop = 0;
  ZCioEth = 1;          // Includes WiFi?
  ZCioUSB = 2;
  ZCioCOM = 3;          // Com ports
  ZCioHDMI = 4; // HDMI Display
  ZCioOther = 255;
}

enum sWAdapterType {
	IGNORE = 0;
	VLAN = 1;
	BOND = 2;
}

message sWAdapterParams {
	sWAdapterType aType = 1;

	// vlan
	string underlayInterface = 8;
        uint32 vlanId = 9;

	// OR : repeated physical interfaces for bond0
	repeated string bondgroup = 10;
}

message SystemAdapter {
	// name of the adapter; hardware-specific e.g., eth0
	string name = 1;

	sWAdapterParams allocDetails = 20;

	// this is part of the freelink group
	bool freeUplink = 2;

	// this is part of the uplink group
	bool uplink = 3;

	// attach this network config for this adapter
	string networkUUID = 4;

	// if its static network we need ip address
	string addr = 5;

	// alias/logical name which will be reported to zedcloud
	// and used for app instances
	string logicalName = 6;
}
